# satlight

./: README.md  blender_script_to_copy.py  light-characterisation.py  load_TLEs.py  plot_lightcurve.py  pyproject.toml
blender-characterisation/: lambertian-surface.py
data/models/Falcon9 RB model/: F9_Upperstage.stl
data/models/Intelsat 1R/: Am84_26.rar  hs702.mdl  mdl_to_stl_convert.m
lightcurve-generator/: MAIN_GS_PASSES.py  geometry.py  plot_lightcurve.py  project_specification.docx  readExr.py
lightcurve-generator/GS_contacts/: contacts.json
lightcurve-generator/blender-interface/: blender_script_to_copy.py
lightcurve-generator/geometry/: fetch_TLEs.py
lightcurve-generator/lightcurver/: observed_satellite.py  utils.py
lightcurve-generator/renders/: 0001.exr  0002.exr  0003.exr  0004.exr  0005.exr  0006.exr  0007.exr  0008.exr  0009.exr  0010.exr  0011.exr  0012.exr  0013.exr  0014.exr  0015.exr  0016.exr  0017.exr  0018.exr  0019.exr  0020.exr  0021.exr  0022.exr  0023.exr  0024.exr  0025.exr  0026.exr  0027.exr  0028.exr  0029.exr  0030.exr  0031.exr  0032.exr  0033.exr  0034.exr  0035.exr  0036.exr  0037.exr  0038.exr  0039.exr  0040.exr  (+167 more)
lightcurve-generator/surface-characterisation/: lambertian.py
lightcurve-generator/tle_cache/: active.txt
lightcurves-sept/: main.py
lightcurves-sept/lightcurver/: blender.py  geometry_gruff.py
satCADModels/Starlink/starlink_low_res/: Starlink.stl
satlight/: .gitignore  geometry.py  main.py  measured-irrandiance.py  plot_lightcurve.py
validation/reference_data/: solar_spectra.py
(+10 files in other folders)
